# proglangs_bochkarev

./: .gitignore  CMakeLists.txt  CellData.cpp  CellData.h  Excel.pro  Exception.h  InterpreterHandler.cpp  InterpreterHandler.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PythonInterpreter.cpp  PythonInterpreter.h  README.md  TableViewController.cpp  TableViewController.h  TableViewModel.cpp  TableViewModel.h  common.h  main.cpp  resources.qrc
Excel/: Excel.pro  celldata.cpp  main.cpp  mainwindow.ui  tableviewmodel.cpp  tableviewmodel.h
